# serializer version: 1
# name: TestGet.test_ok
  dict({
    'complete': False,
    'context': dict({
    }),
    'count': 0,
    'created_at': 'approximately_now_isoformat',
    'error': None,
    'file_size': None,
    'progress': 0,
    'step': 'refresh_reference_releases',
    'type': 'refresh_reference_releases',
  })
# ---
# name: test_find
  list([
    dict({
      'complete': False,
      'context': dict({
      }),
      'count': 0,
      'created_at': 'approximately_now_isoformat',
      'error': None,
      'file_size': None,
      'id': 3,
      'progress': 0,
      'step': 'clone_reference',
      'type': 'clone_reference',
    }),
    dict({
      'complete': False,
      'context': dict({
      }),
      'count': 0,
      'created_at': 'approximately_now_isoformat',
      'error': None,
      'file_size': None,
      'id': 2,
      'progress': 0,
      'step': 'clean_references',
      'type': 'clean_references',
    }),
    dict({
      'complete': False,
      'context': dict({
      }),
      'count': 0,
      'created_at': 'approximately_now_isoformat',
      'error': None,
      'file_size': None,
      'id': 1,
      'progress': 0,
      'step': 'refresh_reference_releases',
      'type': 'refresh_reference_releases',
    }),
  ])
# ---
